workshop04/setup/workshop04.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: workshop04
