workshop04/setup/gateway.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gtw
  # intentional
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    hostname: '*.nip.io'
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
