workshop04/setup/expose-services.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-httproute
  namespace: prometheus
spec:
  hostnames:
  #TODO: change the GATEWAY_IP to gateway IP address
  - prometheus-GATEWAY_IP.nip.io
  parentRefs:
    - name: default-gtw 
      namespace: default
      port: 80
  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /
    backendRefs:
    - name: prom-stack-kube-prometheus-prometheus     
      namespace: prometheus
      port: 9090

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: prometheus
spec:
  hostnames:
  #TODO: change the GATEWAY_IP to gateway IP address
  - grafana-GATEWAY_IP.nip.io
  parentRefs:
    - name: default-gtw 
      namespace: default
      port: 80
  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /
    backendRefs:
    - name: prom-stack-grafana
      namespace: prometheus
      port: 80
